# CAT

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
exam_tasks/: costs.csv  notebook.ipynb  task_1_version_control.ipynb  task_2_collaborative_projects.ipynb  task_3_python_knowledge.ipynb  task_4_working_with_files.ipynb  task_5_testing_debugging.ipynb  task_6_documentation.ipynb  task_7_packaging_libraries.ipynb  task_8_code_structure_design.ipynb  task_9_profiling_benchmarking.ipynb
examples/: cat.wkab
src/allocations/: __init__.py  __main__.py  cli.py  io.py  matrix.py  models.py  solvers.py
tests/: test_allocations.py
